example/example.css
@import url(http://fonts.googleapis.com/css?family=Metrophobic);
@import url(http://fonts.googleapis.com/css?family=Oswald:400,700);
body{
    background-color: #f4f4f4;
    color:#333333;
    font-family: 'Metrophobic', sans-serif;
    font-size:12px;
}
h1{
    font-size: 1.5rem;
}
h1.topHeading{
    margin-top:0;
}
h2{
    font-size: 1.2rem;
}
h1,h2,h3,h4,h5,h6{
    font-family: 'Oswald', sans-serif;
}

.clear:before,
.clear:after {
    content: " ";
    display: table;
}

.clear:after {
    clear: both;
}

.topMenu a{
    display: inline-block;
    padding: 5px;
    border:1px solid #dddddd;
    color:#333333;
    text-decoration: none;
    border-radius: 3px;
}
.topMenu a.selected{
    background-color: #cccccc;

}
.mainContent{
    position: relative;
    z-index: 2;
    overflow-x: hidden;
}
.wideContainer{
    width:600px;
}
.heading{
    clear: both;
}
.float{
    float:left;
}
.info{
    display: table;
    margin-right: 2em;

}
.info>div{
    display: table-row;
}
.info>div>span{
    display: table-cell;
    padding:3px;
}
.info .name{
    border-right: 1px solid #ddd;
}
.info .topRow>span{
    text-align: center;
    border-bottom: 1px solid #ddd;
}
.info .topRow .widthInfo{
    font-size: .9em;
    color:#666;
}
.infoBlock{
    display: inline-block;
    position: relative;

}
.infoBlock .content{
    position: relative;
    display: block;
    padding:5px;
}
.infoBlock .content>.overlay{
    position: absolute;
    display: block;
    padding:5px;
    left:0;
    right:0;
    bottom:0;
    top:0;
}
.overlay{
    background-color: #83c77b;
}
.number{
    position: fixed;
    right: 0;
    bottom: 0;
    font-size: 200px;
    line-height: .8em;
    color:#cccccc;
    font-family: 'Oswald', sans-serif;
    font-weight: 700;
}

